FIX: Resize videos on smaller screens [t14763]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10677 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -1040,3 +1040,10 @@
     }
 }
 
+/* VideoJS */
+@media (max-width:600px) {
+    .video-js {
+        width: 80vw;
+        height: 80vw;
+    }
+}
